[project]
name = "i-unipile-sdk"
version = "0.1.0"
description = "Python SDK for interacting with Unipile API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# On top of the default `select` (`E4`, E7`, `E9`, and `F`), enable flake8-bugbear (`B`) and flake8-quotes (`Q`).
extend-select = ["B", "Q"]

[tool.ruff.format]
line-ending = "auto"
docstring-code-format = true
